# civicsafety

./: AGENTS.md  CHANGELOG.md  MILESTONE_0_7_DONE.md  PRODUCTION_DEPTH_SAFETY_WORKPAPER_PERSISTENCE_DONE.md  README.md  README.txt  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
civicsafety/: __init__.py  main.py  persistence.py  pio.py  policy.py  public_ui.py  stats.py  training.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  architecture.md  browser-qa-civicsafety-v0.1.1-alignment-summary.md  browser-qa-production-depth-safety-workpaper-persistence-summary.md  browser-qa-summary.md  github-discussions-seed.md  index.html
scripts/: check-civiccore-placeholder-imports.py  verify-docs.sh  verify-release.sh
tests/: test_civicsafety_foundation.py  test_production_depth_safety_persistence.py  test_runtime_foundation.py
